# GRIP

./: .gitignore  README.md  constants.py  pyproject.toml  utils.py
arguments/: __init__.py  base_args.py  eval_args.py  inf_args.py  model_args.py  task_args.py  train_args.py
data/: __init__.py
data/raw_datasets/: __init__.py
data/raw_datasets/codexm/: test.txt  (+7 more)
evaluation/: __init__.py  metrics.py  utils.py
grip/: __init__.py
grip/tasks/: __init__.py  utils.py
grip/training/: __init__.py  train.py  utils.py
models/: __init__.py  utils.py
models/emb_models/: __init__.py  base.py  hf.py
models/ft_models/: __init__.py  hf.py
models/inf_models/: __init__.py  base.py  claude.py  hf.py  oai.py
scripts/: mp_wrapper.py  process_raw_data.py  run_eval.py  run_grip.py  run_llm.py
shells/: clegr_facts.sh  clegr_reasons.sh  codexm_nell23k_batch_run.sh  dev.sh  llm_eval.sh  llm_inf.sh  scene_graph.sh
shells/llama_grip_inf/: clegr_facts.sh  clegr_facts_context.sh  clegr_reasoning.sh  clegr_reasoning_context.sh  codexm.sh  fb15k237.sh  fb15k237_2.sh  nell23k.sh  scene_graph.sh  scene_graph_context.sh  wn18rr.sh
shells/llama_llm_inf/: clegr_facts.sh  clegr_reasoning.sh  fb15k237.sh  scene_graph.sh  wn18rr.sh
shells/qwen_grip_inf/: clegr_facts.sh  clegr_facts_context.sh  clegr_reasoning.sh  clegr_reasoning_context.sh  codexm.sh  fb15k237.sh  fb15k237_2.sh  nell23k.sh  scene_graph.sh  scene_graph_context.sh  scene_graph_large.sh  wn18rr.sh
shells/qwen_llm_inf/: clegr_facts.sh  clegr_reasoning.sh  codexm.sh  fb15k237.sh  nell23k.sh  scene_graph.sh  wn18rr.sh
(+34 files in other folders)
